--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,71 @@
 *, *::before, *::after {
     box-sizing: border-box;
 }
+
+body {
+    margin: 0;
+    font-size: 2rem;
+}
+
+input, button { 
+    display: block;
+    font-size: inherit;
+}
+
+button {
+    cursor: pointer;
+}
+
+.column {
+    display: flex;
+    flex-direction: column;
+}
+
+.modal-wrapper {
+    position: absolute;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: rgba(0, 0, 0, 0.3);
+    display: none;
+}
+
+.read-wrapper {
+    display: flex;
+    align-self: center;
+}
+
+.modal {
+    max-width: 400px;
+}
+
+.container {
+    min-height: 100vh;
+    background: #F0F0F0;
+}
+
+.content {
+    max-width: 1100px;
+    margin: 0 auto;
+    display: flex;
+}
+
+.header {
+    background: #FFFFFF;
+}
+
+.header > .content {
+    justify-content: space-between;
+    align-items: center;
+}
+
+.main > .content {
+    align-items: center;
+}
+
+.books-wrapper {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+}
