--- a/styles/style.css
+++ b/styles/style.css
@@ -29,16 +29,32 @@ button {
     justify-content: center;
     align-items: center;
     background: rgba(0, 0, 0, 0.3);
-    display: none;
+    opacity: 0;
+    pointer-events: none;
+    transition: all 0.1s;
+}
+
+.modal-wrapper.open {
+    opacity: 1;
+    pointer-events: auto;
+}
+
+.modal {
+    max-width: 400px;
+    background: #FFE8DF;
+    transform: scale(0.5);
+    transition: all 0.3s;
+    opacity: 0;
+}
+
+.modal.open {
+    transform: scale(1);
+    opacity: 1;
 }
 
 .read-wrapper {
     display: flex;
     align-self: center;
-}
-
-.modal {
-    max-width: 400px;
 }
 
 .container {
