--- a/styles/style.css
+++ b/styles/style.css
@@ -20,9 +20,14 @@ input, button {
     display: block;
     font-size: inherit;
     outline: none;
+    background: #EFEFEF;
+    border: 1px solid black;
+    color: black;
 }
 
 button {
+    padding: 5px;
+    margin: 0;
     cursor: pointer;
 }
 
